@@ -4,7 +4,8 @@
 <displaychannel x="0" y="0" width="100%" height="100%" fadetime="{channelFadeTime}">
 	<background>
 			<area x="0" y="73%" width="100%" height="27%" layer="1">
-				<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientChannelPNGT"/>
+				<drawimage condition="eq({indexchannelName}, 0)" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientChannelPNGT"/>
+				<drawimage condition="eq({indexchannelName}, 1)" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientChannelPNGT1"/>
 			</area>
 	</background>
 
@@ -23,8 +24,14 @@
 	</scrapercontent>
 
 	<channelinfo>
-		<area condition="{channelName}" x="1%" y="73%" width="9%" height="4%" layer="3">
+		<!--<areascroll condition="eq({indexchannelName}, 0)" scrollelement="channelname" mode="forthandback" orientation="horizontal" delay="500" scrollspeed="medium" x="{areawidth}*0.005" y="73%" width="{areawidth}*0.105" height="4%" layer="3">
+			<drawtext condition="current" name="channelname" x="0" y="30%" align="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{channelname}" />
+		</areascroll>-->
+		<area condition="eq({indexchannelName}, 0)" x="1%" y="73%" width="9%" height="4%" layer="3">
 			<drawtext x="0" y="30%" align="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{channelname}" />
+		</area>
+		<area condition="eq({indexchannelName}, 1)" x="2%" y="73%" width="18%" height="4%" layer="3">
+			<drawtext x="0" y="30%" font="{light}" fontsize="70%" color="{clrLightGray}" text="{channelname}" />
 		</area>
 		<area x="1%" y="90%" width="9%" height="6%" layer="3">
 			<drawtext x="0" y="0" valign="center" align="center" font="{light}" fontsize="50%" color="{clrLightGray}" text="{channelnumber}" />
@@ -38,12 +45,18 @@
 	</channelinfo>
 	
 	<datetime>
-		<area condition="{dateTime}" x="81%" y="73%" width="13%" height="4%" layer="3">
+		<area condition="{dateTime}++eq({indexchannelName}, 0)" x="81%" y="73%" width="13%" height="4%" layer="3">
+			<drawtext x="0" y="30%" align="right" font="{light}" fontsize="70%" color="{clrLightGray}" text="{dayleadingzero}.{month}.{year}" />
+		</area>
+		<area condition="{dateTime}++eq({indexchannelName}, 1)" x="78%" y="73%" width="13%" height="4%" layer="3">
 			<drawtext x="0" y="30%" align="right" font="{light}" fontsize="70%" color="{clrLightGray}" text="{dayleadingzero}.{month}.{year}" />
 		</area>
 	</datetime>
 	<time>
-		<area condition="{dateTime}" x="93%" y="73%" width="6%" height="4%" layer="3">
+		<area condition="{dateTime}++eq({indexchannelName}, 0)" x="93%" y="73%" width="6%" height="4%" layer="3">
+			<drawtext x="0" y="30%" align="right" font="{light}" fontsize="70%" color="{clrLightGray}" text="{printf('%02d:%02d', hour, min)}" />
+		</area>
+		<area condition="{dateTime}++eq({indexchannelName}, 1)" x="92%" y="73%" width="6%" height="4%" layer="3">
 			<drawtext x="0" y="30%" align="right" font="{light}" fontsize="70%" color="{clrLightGray}" text="{printf('%02d:%02d', hour, min)}" />
 		</area>
 	</time>
